--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         
 
             <div class="game">
-                <a href="https://adi-exe.github.io/tik-tak-toe/">
+                <a href="https://sandhya-exe.github.io/tic-tac-toe/">
                 <img src="ticimg.jpg" alt="Game 1"></a>
                 <p><h3>TIC TAC TOE</h3></p>
                 <p>
                 Now you can play Tic Tac Toe on your device for FREE.</p>
-                <div class="hr"><a href="https://adi-exe.github.io/tik-tak-toe/"> PLAY NOW!</a></div>
+                <div class="hr"><a href="https://sandhya-exe.github.io/tic-tac-toe/"> PLAY NOW!</a></div>
             </div>
             <div class="game">
-                <a href="https://adi-exe.github.io/Rock-Paper_scissor/">
+                <a href="https://sandhya-exe.github.io/Rock-Paper-Scissor/">
                 <img src="stoneimg.jpg" alt="Game 2"></a>
                 <p><h3>ROCK PAPER SCISSOR</h3></p>
                 <p>Accept the challenge & start the rock, paper scissor epic fight battle challenge!</p>
-                <div class="hr"><a href="https://adi-exe.github.io/Rock-Paper_scissor/"> PLAY NOW!</a></div>
+                <div class="hr"><a href="https://sandhya-exe.github.io/Rock-Paper-Scissor/"> PLAY NOW!</a></div>
             </div>
 
             <div class="game">
@@ -49,14 +49,14 @@
                 <p><h3>SNAKE XENZIA</p>
                 </h3>
                 <p>Hit other worms to grow faster, play the fun action hungry snake game.</p>
-                <div class="hr"><a href="https://adi-exe.github.io/Snake-Xenzia/"> PLAY NOW!</a></div>
+                <div class="hr"><a href="https://sandhya-exe.github.io/Snake-Game/"> PLAY NOW!</a></div>
             </div>
             <div class="game">
-                <a href="https://adi-exe.github.io/Memory-Game/">
+                <a href="https://sandhya-exe.github.io/Memory-Game/">
                 <img src="memoryimg.jpg" alt="Game 4"></a>
                 <p><h3>MEMORY GAME</h3></p>
                 <p>Train your cognition with games that target memory, reasoning, and more! </p>
-                <div class="hr"><a href="https://adi-exe.github.io/Memory-Game/"> PLAY NOW!</a></div>
+                <div class="hr"><a href="https://sandhya-exe.github.io/Memory-Game/"> PLAY NOW!</a></div>
             </div>
 
     </main>
